WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
149758
Cannot select certain text on Wikipedia homepage even when zoomed in
https://bugs.webkit.org/show_bug.cgi?id=149758
Summary
Cannot select certain text on Wikipedia homepage even when zoomed in
Enrica Casucci
Reported
2015-10-02 12:23:51 PDT
* STEPS TO REPRODUCE 1. Go to wikipedia.org 2. Select any plain text * RESULTS Expected: Should be able to select text. Actual: Cannot select text. The page is mostly links, but even zooming in on plain text does not allow for selecting text. Event tapAndHalf doesn't work on links.
Attachments
Patch
(31.98 KB, patch)
2015-10-02 12:33 PDT
,
Enrica Casucci
mitz: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Enrica Casucci
Comment 1
2015-10-02 12:33:53 PDT
Created
attachment 262346
[details]
Patch
WebKit Commit Bot
Comment 2
2015-10-02 12:37:26 PDT
Attachment 262346
[details]
did not pass style-queue: ERROR: Source/WebKit2/UIProcess/WebPageProxy.h:467: Extra space before ( in function call [whitespace/parens] [4] ERROR: Source/WebKit2/UIProcess/WebPageProxy.h:474: Extra space before ( in function call [whitespace/parens] [4] ERROR: Source/WebKit2/UIProcess/WebPageProxy.h:475: Extra space before ( in function call [whitespace/parens] [4] ERROR: Source/WebKit2/UIProcess/WebPageProxy.h:476: Extra space before ( in function call [whitespace/parens] [4] ERROR: Source/WebKit2/UIProcess/WebPageProxy.h:479: Extra space before ( in function call [whitespace/parens] [4] ERROR: Source/WebKit2/UIProcess/ios/WebPageProxyIOS.mm:369: Extra space before ( in function call [whitespace/parens] [4] ERROR: Source/WebKit2/UIProcess/ios/WebPageProxyIOS.mm:441: Extra space before ( in function call [whitespace/parens] [4] ERROR: Source/WebKit2/UIProcess/ios/WebPageProxyIOS.mm:452: Extra space before ( in function call [whitespace/parens] [4] ERROR: Source/WebKit2/UIProcess/ios/WebPageProxyIOS.mm:474: Extra space before ( in function call [whitespace/parens] [4] ERROR: Source/WebKit2/UIProcess/ios/WebPageProxyIOS.mm:496: Extra space before ( in function call [whitespace/parens] [4] Total errors found: 10 in 7 files If any of these errors are false positives, please file a bug against check-webkit-style.
mitz
Comment 3
2015-10-02 13:48:08 PDT
Looks really good. Why can’t we have a regression test?
Enrica Casucci
Comment 4
2015-10-02 14:16:27 PDT
(In reply to
comment #3
)
> Looks really good. Why can’t we have a regression test?
I'll add it as soon as Simon has the long press working.
Enrica Casucci
Comment 5
2015-10-05 11:51:08 PDT
Thanks for the review! Committed revision 190568.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug